Verified Can Create MiNiFi Conan Package with LibArchive & MQTT extensions
Also added libarchive conan package and paho mqtt c conan package for MiNiFi extension
processors. I then recreated MiNiFi conan package. Then I verified I can build LibArchive
and PahoMQTT processor tests in my companies C++ infrastructure and run those tests.

Through learning how to build MiNiFi edge data pipelines programmatically through the
C++ test programs, I plan to create MiNiFi edge data pipelines in medical robotics
with custom MiNiFi C++ processors that I create.

--- a/extensions/libarchive/CMakeLists.txt
+++ b/extensions/libarchive/CMakeLists.txt
@@ -27,8 +27,8 @@ if (ENABLE_LZMA)
     list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/liblzma/dummy")
 endif()
 
-include(BundledLibArchive)
-use_bundled_libarchive(${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR})
+include(GetLibArchive)
+get_libarchive(${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR})
 
 include(${CMAKE_SOURCE_DIR}/extensions/ExtensionHeader.txt)
 
