--- a/controller/tests/CMakeLists.txt
+++ b/controller/tests/CMakeLists.txt
@@ -36,7 +36,7 @@ foreach(testfile ${CONTROLLER_TESTS})
 
     createTests(${testfilename})
 
-    target_link_libraries(${testfilename} Catch2WithMain ${LIBMINIFI} libminifi-unittest)
+    target_link_libraries(${testfilename} Catch2::Catch2WithMain ${LIBMINIFI} libminifi-unittest)
     add_test(NAME ${testfilename} COMMAND ${testfilename} WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
 
     math(EXPR CONTROLLER_TEST_COUNT "${CONTROLLER_TEST_COUNT}+1")
