--- a/extensions/smb/tests/CMakeLists.txt
+++ b/extensions/smb/tests/CMakeLists.txt
@@ -26,7 +26,7 @@ FOREACH(testfile ${SMB_TESTS})
     target_include_directories(${testfilename} PRIVATE BEFORE "${CMAKE_SOURCE_DIR}/extensions/standard-processors")
     target_include_directories(${testfilename} PRIVATE BEFORE "${CMAKE_SOURCE_DIR}/extensions/smb")
     createTests("${testfilename}")
-    target_link_libraries(${testfilename} Catch2WithMain)
+    target_link_libraries(${testfilename} Catch2::Catch2WithMain)
     target_link_libraries(${testfilename} minifi-smb)
     target_link_libraries(${testfilename} minifi-standard-processors Netapi32)
     MATH(EXPR SMB_TEST_COUNT "${SMB_TEST_COUNT}+1")
