--- a/libminifi/test/integration/CMakeLists.txt
+++ b/libminifi/test/integration/CMakeLists.txt
@@ -28,7 +28,7 @@ FOREACH(testfile ${INTEGRATION_TESTS})
     target_include_directories(${testfilename} BEFORE PRIVATE "${CMAKE_SOURCE_DIR}/extensions/civetweb/")
     target_include_directories(${testfilename} BEFORE PRIVATE "${CMAKE_SOURCE_DIR}/extensions/standard-processors/")
     target_link_libraries(${testfilename} minifi-standard-processors)
-    target_link_libraries(${testfilename} Catch2WithMain Threads::Threads)
+    target_link_libraries(${testfilename} Catch2::Catch2WithMain Threads::Threads)
     target_compile_definitions(${testfilename} PRIVATE TEST_RESOURCES="${TEST_RESOURCES}")
     if(NOT ${testfilename} IN_LIST TESTS_WITH_LIBARCHIVE_DEPENDENCY)
         add_test(NAME "${testfilename}" COMMAND "${testfilename}")
