--- a/libminifi/test/schema-tests/CMakeLists.txt
+++ b/libminifi/test/schema-tests/CMakeLists.txt
@@ -25,7 +25,7 @@ FOREACH(testfile ${SCHEMA_TESTS})
   get_filename_component(testfilename "${testfile}" NAME_WE)
   add_minifi_executable("${testfilename}" "${testfile}")
   createTests("${testfilename}")
-  target_link_libraries(${testfilename} Catch2WithMain)
+  target_link_libraries(${testfilename} Catch2::Catch2WithMain)
   target_link_libraries(${testfilename} minifi-standard-processors)
   target_link_libraries(${testfilename} nlohmann_json_schema_validator)
   MATH(EXPR SCHEMA_TEST_COUNT "${SCHEMA_TEST_COUNT}+1")
