--- a/extensions/kubernetes/tests/CMakeLists.txt
+++ b/extensions/kubernetes/tests/CMakeLists.txt
@@ -25,7 +25,7 @@ FOREACH(TEST_FILE ${KUBERNETES_UNIT_TESTS})
     target_include_directories(${TEST_TARGET} PRIVATE BEFORE "${CMAKE_SOURCE_DIR}/libminifi")
     target_include_directories(${TEST_TARGET} PRIVATE BEFORE "${CMAKE_SOURCE_DIR}/extensions/kubernetes")
     target_link_libraries(${TEST_TARGET} minifi-kubernetes-extensions)
-    target_link_libraries(${TEST_TARGET} Catch2WithMain)
+    target_link_libraries(${TEST_TARGET} Catch2::Catch2WithMain)
     createTests("${TEST_TARGET}")
     add_test(NAME ${TEST_TARGET} COMMAND "${TEST_TARGET}" WORKING_DIRECTORY "${TEST_DIR}")
     MATH(EXPR KUBERNETES_UNIT_TEST_COUNT "${KUBERNETES_UNIT_TEST_COUNT}+1")
