--- a/extensions/rocksdb-repos/tests/CMakeLists.txt
+++ b/extensions/rocksdb-repos/tests/CMakeLists.txt
@@ -25,7 +25,7 @@ FOREACH(testfile ${ROCKSDB_UNIT_TESTS})
     target_include_directories(${testfilename} BEFORE PRIVATE "${CMAKE_SOURCE_DIR}/extensions/rocksdb-repos/")
     target_include_directories(${testfilename} SYSTEM BEFORE PRIVATE "${ROCKSDB_THIRDPARTY_ROOT}/include")
     createTests("${testfilename}")
-    target_link_libraries(${testfilename} Catch2WithMain)
+    target_link_libraries(${testfilename} Catch2::Catch2WithMain)
     target_link_libraries(${testfilename} minifi-rocksdb-repos)
     target_link_libraries(${testfilename} minifi-standard-processors)
     MATH(EXPR ROCKSDB_TEST_COUNT "${ROCKSDB_TEST_COUNT}+1")
