--- a/extensions/standard-processors/tests/CMakeLists.txt
+++ b/extensions/standard-processors/tests/CMakeLists.txt
@@ -36,7 +36,7 @@ FOREACH(testfile ${PROCESSOR_UNIT_TESTS})
     target_include_directories(${testfilename} BEFORE PRIVATE "${CMAKE_SOURCE_DIR}/extensions/civetweb/")
     target_include_directories(${testfilename} BEFORE PRIVATE "${CMAKE_SOURCE_DIR}/extensions/expression-language/")
     createTests("${testfilename}")
-    target_link_libraries(${testfilename} Catch2WithMain)
+    target_link_libraries(${testfilename} Catch2::Catch2WithMain)
     target_link_libraries(${testfilename} minifi-expression-language-extensions)
     target_link_libraries(${testfilename} minifi-standard-processors)
     target_compile_definitions("${testfilename}" PRIVATE JOLT_TESTS_DIR="${jolt_tests_SOURCE_DIR}/jolt-core/src/test/resources/json/shiftr")
@@ -66,7 +66,7 @@ FOREACH(testfile ${PROCESSOR_INTEGRATION_TESTS})
     target_include_directories(${testfilename} BEFORE PRIVATE ./include)
     createIntegrationTests("${testfilename}")
     target_link_libraries(${testfilename})
-    target_link_libraries(${testfilename} Catch2WithMain)
+    target_link_libraries(${testfilename} Catch2::Catch2WithMain)
     target_link_libraries(${testfilename} minifi-standard-processors)
     target_compile_definitions("${testfilename}" PRIVATE TZ_DATA_DIR="${CMAKE_BINARY_DIR}/tzdata")
     target_compile_definitions("${testfilename}" PRIVATE TEST_RESOURCES="${TEST_RESOURCES}")
