--- a/minifi_main/tests/CMakeLists.txt
+++ b/minifi_main/tests/CMakeLists.txt
@@ -23,7 +23,7 @@ FOREACH(TEST_FILE ${MINIFI_MAIN_UNIT_TESTS})
     get_filename_component(TEST_TARGET "${TEST_FILE}" NAME_WE)
     add_minifi_executable("${TEST_TARGET}" "${TEST_FILE}" "../TableFormatter.cpp")
     target_include_directories(${TEST_TARGET} PRIVATE BEFORE "${CMAKE_SOURCE_DIR}/minifi_main")
-    target_link_libraries(${TEST_TARGET} core-minifi Catch2WithMain)
+    target_link_libraries(${TEST_TARGET} core-minifi Catch2::Catch2WithMain)
     createTests("${TEST_TARGET}")
     add_test(NAME ${TEST_TARGET} COMMAND "${TEST_TARGET}" WORKING_DIRECTORY "${TEST_DIR}")
     MATH(EXPR MINIFI_MAIN_UNIT_TEST_COUNT "${MINIFI_MAIN_UNIT_TEST_COUNT}+1")
