Fixed Standalone CMake CTEST Issues, So All 275 TESTs PASS for Ubuntu22.04
Verified that I can build MiNiFi C++ in standalone CMake mode and that all 275 CTESTs PASS.
Verified I can run conan to build MiNIFi C++ with some features DISABLED, so its easier to
create the MiNiFi C++ conan package. In the case of building MiNiFi C++ with conan, when
we run CTEST, 219 TESTs run and 217 TESTs PASS. We dont include in conanfile.py 'cmake.ctest()',
so that we can manually run ctest after conan finishes building MiNiFi C++.

Also removed the test_package/ folder and C++ MiNiFi C++ test for AbstractProcessorTest since I
plan to later do a follow up PR that runs a new TEST that will be closer to how I plan
to use MiNiFi C++ in other C++ projects. For example, in one of the follow up PRs, I plan
to programmatically create an edge data pipeline that processes medical images as an example.

I think these updates will enable the CI/CD to pass, but also need to double check

--- a/extensions/aws/tests/CMakeLists.txt
+++ b/extensions/aws/tests/CMakeLists.txt
@@ -29,7 +29,7 @@ FOREACH(testfile ${AWS_INTEGRATION_TESTS})
     target_include_directories(${testfilename} PRIVATE BEFORE "${CMAKE_SOURCE_DIR}/extensions/aws/processors")
     target_include_directories(${testfilename} PRIVATE BEFORE "${CMAKE_SOURCE_DIR}/extensions/expression-language")
     createTests("${testfilename}")
-    target_link_libraries(${testfilename} Catch2::Catch2WithMain)
+    target_link_libraries(${testfilename} Catch2WithMain)
     target_link_libraries(${testfilename} minifi-aws)
     target_link_libraries(${testfilename} minifi-standard-processors)
     target_link_libraries(${testfilename} minifi-expression-language-extensions)
