--- a/extensions/gps/tests/CMakeLists.txt
+++ b/extensions/gps/tests/CMakeLists.txt
@@ -27,7 +27,7 @@ FOREACH(testfile ${GPS_INTEGRATION_TESTS})
     createTests("${testfilename}")
     target_link_libraries(${testfilename} minifi-gps)
     target_link_libraries(${testfilename} minifi-standard-processors)
-    target_link_libraries(${testfilename} Catch2::Catch2WithMain)
+    target_link_libraries(${testfilename} Catch2WithMain)
     MATH(EXPR GPS_TEST_COUNT "${GPS_TEST_COUNT}+1")
     add_test(NAME "${testfilename}" COMMAND "${testfilename}" WORKING_DIRECTORY ${TEST_DIR})
 ENDFOREACH()
