--- a/libminifi/test/unit/CMakeLists.txt
+++ b/libminifi/test/unit/CMakeLists.txt
@@ -30,7 +30,7 @@ FOREACH(testfile ${UNIT_TESTS})
     target_compile_definitions("${testfilename}" PRIVATE TZ_DATA_DIR="${CMAKE_BINARY_DIR}/tzdata")
     target_compile_definitions("${testfilename}" PRIVATE TEST_RESOURCES="${TEST_RESOURCES}")
     createTests("${testfilename}")
-    target_link_libraries(${testfilename} Catch2::Catch2WithMain)
+    target_link_libraries(${testfilename} Catch2WithMain)
     MATH(EXPR UNIT_TEST_COUNT "${UNIT_TEST_COUNT}+1")
     add_test(NAME "${testfilename}" COMMAND "${testfilename}")
 ENDFOREACH()
