--- a/extensions/libarchive/tests/CMakeLists.txt
+++ b/extensions/libarchive/tests/CMakeLists.txt
@@ -28,7 +28,7 @@ FOREACH(testfile ${ARCHIVE_INTEGRATION_TESTS})
     target_link_libraries(${testfilename} minifi-archive-extensions)
     target_link_libraries(${testfilename} minifi-standard-processors)
     createTests("${testfilename}")
-    target_link_libraries(${testfilename} Catch2::Catch2WithMain)
+    target_link_libraries(${testfilename} Catch2WithMain)
     MATH(EXPR EXTENSIONS_TEST_COUNT "${EXTENSIONS_TEST_COUNT}+1")
     add_test(NAME "${testfilename}" COMMAND "${testfilename}" WORKING_DIRECTORY ${TEST_DIR})
 ENDFOREACH()
