--- a/extensions/lua/tests/CMakeLists.txt
+++ b/extensions/lua/tests/CMakeLists.txt
@@ -27,7 +27,7 @@ FOREACH(testfile ${EXECUTESCRIPT_LUA_TESTS})
     target_include_directories(${testfilename} PRIVATE BEFORE "${CMAKE_SOURCE_DIR}/extensions/lua")
     target_include_directories(${testfilename} SYSTEM PRIVATE BEFORE "${SOL2_INCLUDE_DIR}")
     target_link_libraries(${testfilename} minifi-lua-script-extension minifi-script-extension)
-    target_link_libraries(${testfilename} Catch2::Catch2WithMain)
+    target_link_libraries(${testfilename} Catch2WithMain)
     createTests("${testfilename}")
     MATH(EXPR EXTENSIONS_TEST_COUNT "${EXTENSIONS_TEST_COUNT}+1")
     add_test(NAME "${testfilename}" COMMAND "${testfilename}" WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
