--- a/extensions/procfs/tests/CMakeLists.txt
+++ b/extensions/procfs/tests/CMakeLists.txt
@@ -27,7 +27,7 @@ FOREACH(testfile ${PROCFS_TESTS})
     target_include_directories(${testfilename} PRIVATE BEFORE "${CMAKE_SOURCE_DIR}/extensions/procfs")
     target_include_directories(${testfilename} PRIVATE BEFORE "${CMAKE_SOURCE_DIR}/extensions/standard-processors")
     createTests("${testfilename}")
-    target_link_libraries(${testfilename} Catch2::Catch2WithMain)
+    target_link_libraries(${testfilename} Catch2WithMain)
     target_link_libraries(${testfilename} minifi-procfs)
     target_link_libraries(${testfilename} minifi-standard-processors)
     MATH(EXPR PROCFS_TEST_COUNT "${PROCFS_TEST_COUNT}+1")
