--- a/extensions/script/tests/CMakeLists.txt
+++ b/extensions/script/tests/CMakeLists.txt
@@ -26,7 +26,7 @@ FOREACH(testfile ${EXECUTE_SCRIPT_TESTS})
     target_include_directories(${testfilename} PRIVATE BEFORE "${CMAKE_SOURCE_DIR}/extensions/script")
 
     createTests("${testfilename}")
-    target_link_libraries(${testfilename} Catch2::Catch2WithMain)
+    target_link_libraries(${testfilename} Catch2WithMain)
     target_link_libraries(${testfilename} minifi-script-extension)
     MATH(EXPR EXECUTE_SCRIPT_TEST_COUNT "${EXECUTE_SCRIPT_TEST_COUNT}+1")
     add_test(NAME "${testfilename}" COMMAND "${testfilename}" WORKING_DIRECTORY ${TEST_DIR})
