Created RocksDB Conan Recipe to take patches like BundledRocksDB
Also when we create the RocksDB conan package, it not only builds with the patches like BundledRocksDB, it also
incorporates ZLib and ZStd conan packages too.

Therefore, now that we use a conan RocksDB for building MiNiFi with conan, when we build MiNiFi with standalone
CMake, we use the original version of BundledRocksDB that was in 'main' branch before I modified it.

I verified that when I build MiNiFi with conan, 218 CTESTs pass out of 219.
Similarly, when I build MiNiFi with standalone, then I run CTESTs, 218 out of 219 pass too.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -228,8 +228,10 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/ssl")
 
 
 if (ENABLE_BZIP2 AND (ENABLE_LIBARCHIVE OR (ENABLE_ROCKSDB AND NOT WIN32)))
-    include(BundledBZip2)
-    use_bundled_bzip2(${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR})
+    include(GetBZip2)
+    get_bzip2(${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR})
+    # include(BundledBZip2)
+    # use_bundled_bzip2(${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR})
     list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/bzip2/dummy")
 endif()
 
