--- a/conf/minifi.properties.in
+++ b/conf/minifi.properties.in
@@ -86,21 +86,21 @@ nifi.content.repository.class.name=DatabaseContentRepository
 
 ## Enabling C2 Uncomment each of the following options
 ## define those with missing options
-#nifi.c2.enable=true
+nifi.c2.enable=true
 ## base URL of the c2 server,
 ## very likely the same base url of rest urls
-#nifi.c2.flow.base.url=
+nifi.c2.flow.base.url=http://localhost:13405/api/flows
 #nifi.c2.rest.path.base=
-#nifi.c2.rest.url=
-#nifi.c2.rest.url.ack=
+nifi.c2.rest.url=http://localhost:13405/api/heartbeat
+nifi.c2.rest.url.ack=http://localhost:13405/api/acknowledge
 nifi.c2.root.classes=DeviceInfoNode,AgentInformation,FlowInformation,AssetInformation
 ## Minimize heartbeat payload size by excluding agent manifest from the heartbeat
 nifi.c2.full.heartbeat=false
 ## heartbeat twice a minute
 #nifi.c2.agent.heartbeat.period=30 sec
 ## define parameters about your agent
-#nifi.c2.agent.class=
-#nifi.c2.agent.identifier=
+nifi.c2.agent.class=geometry_engine_cpp
+nifi.c2.agent.identifier=geometry_engine_id_cpp
 ## define metrics reported
 # nifi.c2.root.class.definitions=metrics
 # nifi.c2.root.class.definitions.metrics.name=metrics
@@ -114,13 +114,13 @@ nifi.c2.full.heartbeat=false
 
 ## Specify multiple heartbeat handlers.
 ## HeartbeatLogger logs the heartbeats on TRACE for debugging.
-#nifi.c2.agent.heartbeat.reporter.classes=HeartbeatLogger
+nifi.c2.agent.heartbeat.reporter.classes=HeartbeatLogger
 
 # specify encoding strategy for c2 requests (gzip, none)
-#nifi.c2.rest.request.encoding=none
+nifi.c2.rest.request.encoding=none
 
 # specify the maximum number of bulletins to send in a heartbeat
-#nifi.c2.flow.info.processor.bulletin.limit=1000
+nifi.c2.flow.info.processor.bulletin.limit=1000
 
 ## enable the controller socket provider on port 9998
 ## off by default.
